--- a/app/assets/stylesheets/products/_index.scss
+++ b/app/assets/stylesheets/products/_index.scss
@@ -12,6 +12,10 @@
     .fa-times-circle {
       color: $red;
     }
+
+    .fa-check-circle {
+      color: $blue;
+    }
   }
   .step-title {
     font-size: 18px;
