styled stripe form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,4 +43,4 @@
 @import "campaigns/index";
 @import "campaigns/show";
 @import "campaigns/promo";
-@import "participations/index";
+@import "reservations/index";
