--- a/app/views/reservations/_address.html.erb
+++ b/app/views/reservations/_address.html.erb
@@ -35,7 +35,7 @@
           <span class="icon fas fa-mobile"></span>
         </div>
       </div>
-      <div class="update-address-button">
+      <div class="validate-form-button">
         <%= f.button :submit, value: "Enregistrer", class: "btn-blue" %>
       </div>
     </div>
