able to save card if user has no customer_id

--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -2,7 +2,7 @@
 <%= render 'shared/navbar' %>
 <div class="page-container">
   <div class="campaigns-container" id="feed">
-    <div class="left-and-right">
+    <div class="two-parts">
       <div class="left-recap">
         <h5 id="recap">Récap</h5>
         <%= render 'recap' %>
