--- a/app/views/shared/_stripe-form.html.erb
+++ b/app/views/shared/_stripe-form.html.erb
@@ -1,3 +1,4 @@
+
 <% content_for(:after_js) do %>
   <script>
     var stripe = Stripe('<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>');
@@ -21,13 +22,13 @@
         iconColor: '#fa755a'
       }
     };
+
     // Create an instance of the card Element.
     var card = elements.create('card', {style: style});
 
     // Add an instance of the card Element into the `card-element` <div>.
     card.mount('#card-element');
 
-    // Handle real-time validation errors from the card Element.
     card.addEventListener('change', function(event) {
       var displayError = document.getElementById('card-errors');
       if (event.error) {
@@ -37,14 +38,14 @@
       }
     });
 
-    // Handle form submission.
+    // Create a token or display an error when the form is submitted.
     var form = document.getElementById('reservation-form');
     form.addEventListener('submit', function(event) {
       event.preventDefault();
 
       stripe.createToken(card).then(function(result) {
         if (result.error) {
-          // Inform the user if there was an error.
+          // Inform the customer that there was an error.
           var errorElement = document.getElementById('card-errors');
           errorElement.textContent = result.error.message;
         } else {
@@ -53,5 +54,19 @@
         }
       });
     });
+
+    function stripeTokenHandler(token) {
+      // Insert the token ID into the form so it gets submitted to the server
+      var form = document.getElementById('reservation-form');
+      var hiddenInput = document.createElement('input');
+      hiddenInput.setAttribute('type', 'hidden');
+      hiddenInput.setAttribute('name', 'stripeToken');
+      hiddenInput.setAttribute('value', token.id);
+      form.appendChild(hiddenInput);
+
+      // Submit the form
+      form.submit();
+    }
+
     </script>
   <% end %>
