--- a/app/views/reservations/_stripe-infos.html.erb
+++ b/app/views/reservations/_stripe-infos.html.erb
@@ -1,7 +1,7 @@
 <div class="info-detail">Vous n'avez rien à payer aujourd'hui, mais vous vous engagez à ne pas vous désister si nous arrivons à obtenir un prix inférieur à celui mentionné dans le récapitulatif ci-contre.
 </div>
 <% if @customer_infos.present? %>
-  <%= render 'shared/card' %>
+  <%= render 'card' %>
   <%= form_tag pick_reservations_path(@pick), class: "hidden", id: "reservation-form" do %>
     <div class="form-row">
       <label for="card-element">
@@ -38,7 +38,7 @@
       <button class="booking-button btn-orange" id="validate-reservation">
         <i class="fa fa-lock"></i>
         <span>Confirmer réservation</span>
-    </button>
+      </button>
     </div>
   <% end %>
 <% end %>
