--- a/app/views/reservations/_stripe-infos.html.erb
+++ b/app/views/reservations/_stripe-infos.html.erb
@@ -1,4 +1,9 @@
-<div class="info-detail">Vous n'avez rien à payer aujourd'hui, mais vous vous engagez à ne pas vous désister si nous arrivons à obtenir un prix inférieur à celui mentionné dans le récapitulatif ci-contre.
+<div class="info-detail">
+  <% if @pick.campaign.test_type == "Test ouvert" %>
+    Si nous pouvons obtenir un prix inférieur à <%= sprintf('%.2f', @pick.campaign.product.expedition_costs + @pick.price) %>€ (livraison comprise), vous en bénéficierez à la fin de la campagne. La carte débitée sera celle renseignée ci-dessous. <b>Vous n'avez rien à payer aujourd'hui.</b>
+  <% else %>
+    Confirmez votre réservation pour bénéficier du meilleur prix promotionnel. La carte renseignée ci-dessous sera débitée à la fin de la campagne d'un montant inférieur ou égal à <%= sprintf('%.2f', @pick.campaign.product.expedition_costs + @pick.price) %>€ (livraison comprise). <b>Vous n'avez rien à payer aujourd'hui.</b>
+  <% end %>
 </div>
 <% if @customer_infos.present? %>
   <%= render 'card' %>
