--- a/app/views/reservations/_card.html.erb
+++ b/app/views/reservations/_card.html.erb
@@ -1,6 +1,13 @@
-<%= @customer_infos["brand"]%>
-<%= @customer_infos["last4"] %>
-<%= @customer_infos["exp_month"]%>/<%= @customer_infos["exp_year"] %>
+<div class="display-card yellow-selected">
+  <i class="fas fa-credit-card"></i>
+  <span><%= @customer_infos["brand"]%></span>
+  <span>**** **** **** <%= @customer_infos["last4"] %></span>
+  <span><%= @customer_infos["exp_month"]%>/<%= @customer_infos["exp_year"] %></span>
+</div>
+<div class="or">OU</div>
+<div class="new-card display-card">
+  Utiliser une autre carte
+</div>
 
 <div class="validate-form-button">
   <%= link_to pick_reservations_path(@pick),  method: :post do %>
