--- a/app/assets/stylesheets/reservations/index.scss
+++ b/app/assets/stylesheets/reservations/index.scss
@@ -104,8 +104,11 @@
   }
 }
 
-.yellow-selected {
+.yellow {
   background-color: lightgoldenrodyellow;
+}
+
+.first-card {
   margin-top: 30px;
 }
 
@@ -134,5 +137,9 @@
     margin-right: 10px;
   }
 
+}
+
+.update-card {
+  display: none;
 }
 
