--- a/app/views/reservations/_address.html.erb
+++ b/app/views/reservations/_address.html.erb
@@ -9,7 +9,7 @@
       <% end %>
     </div>
       <div class="form-inputs">
-        <a href="#address-form" id="go-to-form" class='hidden'></a>
+        <a href="#address-top" id="go-to-form" class='hidden'></a>
         <div class="group-inputs">
           <div class="input-and-icon">
             <%= f.input :first_name, label: false, placeholder:'Prénom' %>
