--- a/app/views/shared/_stripe-form.html.erb
+++ b/app/views/shared/_stripe-form.html.erb
@@ -43,17 +43,32 @@
     form.addEventListener('submit', function(event) {
       event.preventDefault();
 
-      stripe.createToken(card).then(function(result) {
-        if (result.error) {
-          // Inform the customer that there was an error.
-          var errorElement = document.getElementById('card-errors');
-          errorElement.textContent = result.error.message;
+        var firstName = $("#address_first_name").val();
+        var lastName = $("#address_last_name").val();
+        var addressStreet = $("#address_street").val();
+        var zipCode = $("#address_zip_code").val();
+        var city = $("#address_city").val();
+
+
+        if (firstName != "" && lastName != "" && addressStreet != "" && zipCode != "" && city != "" ) {
+          $(".validate-form-button").hide();
+          $(".loader-container").removeClass("hidden").html("<div class='loader'></div>");
+
+          stripe.createToken(card).then(function(result) {
+            if (result.error) {
+              // Inform the customer that there was an error.
+              var errorElement = document.getElementById('card-errors');
+              errorElement.textContent = result.error.message;
+            } else {
+              // Send the token to your server.
+              stripeTokenHandler(result.token);
+            }
+          });
         } else {
-          // Send the token to your server.
-          stripeTokenHandler(result.token);
+          $("#go-to-form").click();
+          $("#address-errors").removeClass("hidden");
         }
       });
-    });
 
     function stripeTokenHandler(token) {
       // Insert the token ID into the form so it gets submitted to the server
@@ -65,7 +80,9 @@
       form.appendChild(hiddenInput);
 
       // Submit the form
-      form.submit();
+      setTimeout(function(){
+        form.submit();
+      }, 500);
     }
 
     </script>
