--- a/app/views/reservations/_registered-card.html.erb
+++ b/app/views/reservations/_registered-card.html.erb
@@ -3,13 +3,11 @@
   <div class="new-card display-card">
     Utiliser une autre carte
   </div>
-
+  <%= link_to "This card", pick_reservations_path(@pick),  method: :post, id:"with_customer_id" %>
   <div class="validate-form-button">
-    <%= link_to pick_reservations_path(@pick),  method: :post do %>
-      <button class="booking-button btn-orange" id="with_customer_id">
-        <i class="fa fa-lock"></i>
-        <span>Confirmer réservation</span>
-      </button>
-    <% end %>
+    <button class="booking-button btn-orange has-infos">
+      <i class="fa fa-lock"></i>
+      <span>Confirmer réservation</span>
+    </button>
   </div>
 </div>
