--- a/app/views/reservations/_stripe-infos.html.erb
+++ b/app/views/reservations/_stripe-infos.html.erb
@@ -9,7 +9,7 @@
   <div class="display-card yellow first-card">
     <i class="fas fa-credit-card"></i>
     <span><%= @customer_infos["brand"]%></span>
-    <span>**** **** **** <%= @customer_infos["last4"] %></span>
+    <span class="hidden-xs">**** **** **** <%= @customer_infos["last4"] %></span>
     <span><%= @customer_infos["exp_month"]%>/<%= @customer_infos["exp_year"] %></span>
   </div>
   <%= render 'registered-card' %>
