redirect to pick show after reservation

--- a/app/views/reservations/_address.html.erb
+++ b/app/views/reservations/_address.html.erb
@@ -3,9 +3,9 @@
   <div class="info-and-inputs">
     <div class="info-detail">
       <% if @pick.campaign.test_type == "Test ouvert" %>
-        Adresse à laquelle vous souhaitez être livré si votre proposition est retenue.
+        Adresse à laquelle vous souhaitez être livré si votre proposition est retenue. (Si livraison applicable).
       <% else %>
-        Adresse à laquelle vous souhaitez être livré.
+        Adresse à laquelle vous souhaitez être livré. (Si livraison applicable).
       <% end %>
     </div>
       <div class="form-inputs">
