--- a/app/assets/stylesheets/picks/show.scss
+++ b/app/assets/stylesheets/picks/show.scss
@@ -1,6 +1,20 @@
 .address-infos {
   margin-top: 20px;
-  div {
-    text-align: center;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  .complement {
+    font-weight: bold;
+  }
+  .info {
+    color: #999999;
+    font-style: italic;
   }
 }
+
+ @media screen and (max-width: 480px) {
+ #ending-date {
+     margin-top: 15px;
+     margin-left: 15px;
+   }
+ }
