--- a/app/assets/stylesheets/users/my_campaigns.scss
+++ b/app/assets/stylesheets/users/my_campaigns.scss
@@ -22,3 +22,9 @@
     border: 1px dashed #FFF;
   }
 }
+
+.status-overview {
+  color: #3F3933;
+  text-transform: uppercase;
+  font-weight: bold;
+}
