save finalize campaign

--- a/app/assets/stylesheets/products/_show.scss
+++ b/app/assets/stylesheets/products/_show.scss
@@ -105,3 +105,9 @@
 #product_description, #pro_bio {
   height: 130px;
 }
+
+@media screen and (max-width: 480px) {
+  .product-feed {
+    padding: 0;
+  }
+}
