--- a/app/assets/stylesheets/users/my_campaigns.scss
+++ b/app/assets/stylesheets/users/my_campaigns.scss
@@ -28,3 +28,15 @@
   text-transform: uppercase;
   font-weight: bold;
 }
+
+
+@media screen and (max-width: 480px) {
+
+
+  .campaign-link.pending .dynamic-timer {
+      margin: 0 5px 0 0;
+      height: 30px;
+      width: 30px;
+      font-size: 13px;
+  }
+}
