--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -4,15 +4,7 @@
   <%= render 'pros/dashboard-navigation' %>
   <div class="general-infos">
     <div class="products-container">
-      <div class="text-part">
-        <h5>Lancez votre campagne</h5>
-        <p>Définissez ici les modalités de la lancement de votre campagne
-        </p>
-         <%= link_to products_path do %>
-          <div class="btn-white">Retour aux produits</div>
-         <% end %>
-      </div>
-      <div class="right-part info-bloc">
+      <div class="campaign-bloc info-bloc">
         <%= simple_form_for [@product, @campaign] do |f| %>
           <div class="product-card">
             <%= cl_image_tag("#{@product.photos.first.path}", :width=>110, :height=>110, :crop=>"fill", class: "recap-image")%>
@@ -30,22 +22,22 @@
             <h3>Choisissez le type de campagne que vous voulez lancer</h3>
             <div class="test-type">
               <h5 class="test-title">A/B Test</h5>
-              <p>Vous hésitez entre plusieurs prix pour votre promo. Lequel serait le plus efficient ? Nous présentons vos prix de façon alternative à chaque participant à la campagne de test pour le déterminer.</p>
+              <p>Vous hésitez entre plusieurs prix pour votre promo. Lequel serait le plus efficient ? Nous présentons vos prix de façon alternative à chaque participant à la campagne de test pour le déterminer. <b>L'A/B test permet de valider votre hypothèse la plus pertinente.</b></p>
             </div>
             <div class="test-type">
               <h5 class="test-title">Test ouvert</h5>
-              <p>Les testeurs intéressés nous communiquent le prix maximal qu'ils sont prêts à payer pour votre produit.</p>
+              <p>Les testeurs intéressés nous communiquent le prix maximal qu'ils sont prêts à payer pour votre produit. L'analyse de chaque proposition permet de déterminer quel volume il est possible de réaliser (et donc quel chiffre d'affaires, marge...) en fonction du prix fixé. <b>Le test ouvert permet de stimuler la demande pour votre produit.</b></p>
             </div>
           </div>
           <div class="test-type-inputs">
           <%= f.collection_radio_buttons :test_type, [["A/B Test", 'A/B Test'] ,["Test ouvert", 'Test ouvert']], :first, :last %>
           </div>
           <div class="price-part">
-            <p>Merci de renseigner le nombre de prix que vous souhaitez tester. Vous pouvez tester entre 2 et 3 prix.</p>
+            <p>Merci de renseigner le nombre de prix que vous souhaitez tester. Vous pouvez tester entre 2 et 3 prix. A la fin de la campagne, les testeurs qui auront accepté de payer un prix supérieur ou égal au prix minimal que vous aurez déterminé, bénéficieront automatiquement de celui-ci. L'analyse des choix des utilisateurs en fonction du prix qui leur est présenté vous aidera à déterminer le meilleur prix pour votre campagne à plus grande échelle.</p>
             <div class="price-inputs">
-              <%= f.input :price_1, label:"Prix testé 1" %>
-              <%= f.input :price_2, label:"Prix testé 2" %>
-              <%= f.input :price_3, label:"Prix testé 3" %>
+              <%= f.input :price_1, placeholder: "Exemple: 47,90", label:"Prix testé 1 (€)" %>
+              <%= f.input :price_2, placeholder: "Exemple: 49,90", label:"Prix testé 2 (€)" %>
+              <%= f.input :price_3, placeholder: "Exemple: 51,90",label:"Prix testé 3 (€)" %>
             </div>
           </div>
           <%= f.button :submit, "Enregistrer", class: "btn-blue", id:"save-cta" %>
