add custom form validation on campaign new if ab test to ensure at least two prices are entered

--- a/app/assets/stylesheets/campaigns/index.scss
+++ b/app/assets/stylesheets/campaigns/index.scss
@@ -44,6 +44,15 @@
   }
 }
 
+.open-part {
+  display: none;
+  p {
+    text-align: justify;
+    font-size: 15px;
+    margin-bottom: 25px;
+  }
+}
+
 .price-inputs {
   display: flex;
   flex-wrap: wrap;
