correct some major bugs on reservation if no address, on campaign dashboard wich was not displaying right the reserved picks

--- a/app/assets/stylesheets/picks/show.scss
+++ b/app/assets/stylesheets/picks/show.scss
@@ -12,9 +12,17 @@
   }
 }
 
+.reservation-encart {
+  margin-top: 20px;
+}
+
  @media screen and (max-width: 480px) {
  #ending-date {
      margin-top: 15px;
      margin-left: 15px;
+   }
+
+   .reservation-encart {
+     margin-top: 0px;
    }
  }
