--- a/app/views/campaigns/_data-campaign.html.erb
+++ b/app/views/campaigns/_data-campaign.html.erb
@@ -14,9 +14,9 @@
           <td><%= sprintf('%.2f', @campaign.product.price) %> €</td>
           <td><%= ((pick.price - @campaign.product.price) / (@campaign.product.price)*100).round %> %</td>
           <td><%= sprintf('%.2f', pick.price) %> €</td>
-          <% qt =  @validated_picks.where("price >= ?", pick.price).count %>
-          <td><%= qt %></td>
-          <td><%= sprintf('%.2f', pick.price*qt) %> €</td>
+          <% qt =  @validated_picks.select { |o| o.price >= pick.price  } %>
+          <td><%= qt.count %></td>
+          <td><%= sprintf('%.2f', pick.price*qt.count) %> €</td>
         </tr>
       <% end %>
     </table>
