--- a/app/views/picks/show.html.erb
+++ b/app/views/picks/show.html.erb
@@ -35,7 +35,7 @@
               </div>
             </div>
           </div>
-          <div class="reservation">
+          <div class="reservation-encart">
             <h5>Réservation</h5>
             <div class="info-bloc">
               <div class="info-detail">
