--- a/app/views/reservations/_recap.html.erb
+++ b/app/views/reservations/_recap.html.erb
@@ -1,17 +1,17 @@
 <div class="explanation info-bloc">
   <div class="image-title-price">
-    <%= cl_image_tag @product.photos.first.path, :height=>75, :crop=>"scale" %>
+    <%= cl_image_tag product.photos.first.path, :height=>75, :crop=>"scale" %>
     <div class="recap-paragraph">
       <div>
-      <h4><%= @product.title.capitalize %></h4>
+      <h4><%= product.title.capitalize %></h4>
       </div>
-      Prix original: <%= sprintf('%.2f', @product.price) %> €
+      Prix original: <%= sprintf('%.2f', product.price) %> €
     </div>
   </div>
-  <% if @product.expedition_costs.present? %>
+  <% if product.expedition_costs.present? %>
     <div class="how-much">
       <div class="text">Coût livraison:</div>
-      <p class="price"><%= sprintf('%.2f', @product.expedition_costs) %> €</p>
+      <p class="price"><%= sprintf('%.2f', product.expedition_costs) %> €</p>
     </div>
   <% end %>
   <div class="how-much">
@@ -19,7 +19,11 @@
     <p class="price"><%= sprintf('%.2f', @pick.price) %> €</p>
   </div>
   <div class="how-much last">
-    <div class="text"><b>Coût total max:</b></div>
-    <p class="price"><%= sprintf('%.2f', @product.expedition_costs if @product.expedition_costs.present? + @pick.price) %>€</p>
-  </div>
+      <div class="text"><b>Coût total max:</b></div>
+      <% if  product.expedition_costs.present? %>
+        <p class="price"><%= sprintf('%.2f', product.expedition_costs + @pick.price) %>€</p>
+      <% else %>
+        <p class="price"><%= sprintf('%.2f', @pick.price) %>€</p>
+      <% end %>
+    </div>
 </div>
