--- a/app/views/users/_my_picks.html.erb
+++ b/app/views/users/_my_picks.html.erb
@@ -41,7 +41,7 @@
           </div>
         </div>
       </div>
-      <%= link_to new_pick_reservation_path(pick) do %>
+      <%= link_to new_pick_reservation_path(pick.id) do %>
         <div class="btn-orange">Valider participation</div>
       <% end %>
     </div>
