change wording on pick show

--- a/app/views/reservations/_address.html.erb
+++ b/app/views/reservations/_address.html.erb
@@ -10,7 +10,7 @@
         <% end %>
       <% else %>
         <% if @product.expedition_costs.present? %>
-          Adresse à laquelle vous souhaitez être livré.
+          Adresse de livraison.
         <% else %>
           Adresse de facturation
         <% end %>
