--- a/app/views/picks/show.html.erb
+++ b/app/views/picks/show.html.erb
@@ -22,7 +22,7 @@
                   <% end %>
                 <% else %>
                   <% if @product.expedition_costs.present? %>
-                    Adresse à laquelle vous souhaitez être livré.
+                    Adresse de livraison.
                   <% else %>
                     Adresse de facturation
                   <% end %>
@@ -49,15 +49,15 @@
               <div class="info-detail">
                 <% if @pick.campaign.test_type == "Test ouvert" %>
                   <% if @product.expedition_costs.present? %>
-                    Si nous pouvons obtenir un prix inférieur à <%= sprintf('%.2f', @product.expedition_costs + @pick.price) %>€ (livraison comprise), vous en bénéficierez à la fin de la campagne. La carte débitée sera celle renseignée ci-dessous. <b>Vous n'avez rien à payer aujourd'hui.</b>
+                    Si nous pouvons obtenir un prix inférieur à <%= sprintf('%.2f', @product.expedition_costs + @pick.price) %>€ (livraison comprise), vous en bénéficierez à la fin de la campagne. La carte débitée sera celle renseignée ci-dessous.
                   <% else %>
-                    Si nous pouvons obtenir un prix inférieur à <%= sprintf('%.2f', @pick.price) %>€, vous en bénéficierez à la fin de la campagne. La carte débitée sera celle renseignée ci-dessous. <b>Vous n'avez rien à payer aujourd'hui.</b>
+                    Si nous pouvons obtenir un prix inférieur à <%= sprintf('%.2f', @pick.price) %>€, vous en bénéficierez à la fin de la campagne. La carte débitée sera celle renseignée ci-dessous.
                   <% end %>
                 <% else %>
                   <% if @product.expedition_costs.present? %>
-                    Vous êtes assuré de bénéficier du meilleur prix promotionnel. La carte renseignée ci-dessous sera débitée à la fin de la campagne d'un montant inférieur ou égal à <%= sprintf('%.2f', @product.expedition_costs + @pick.price) %>€ (livraison comprise). <b>Vous n'avez rien à payer aujourd'hui.</b>
+                    Vous êtes assuré de bénéficier du meilleur prix promotionnel. La carte renseignée ci-dessous sera débitée à la fin de la campagne d'un montant inférieur ou égal à <%= sprintf('%.2f', @product.expedition_costs + @pick.price) %>€ (livraison comprise).
                   <% else %>
-                  Vous êtes assuré du meilleur prix promotionnel. La carte renseignée ci-dessous sera débitée à la fin de la campagne d'un montant inférieur ou égal à <%= sprintf('%.2f', @pick.price) %>€. <b>Vous n'avez rien à payer aujourd'hui.</b>
+                  Vous êtes assuré du meilleur prix promotionnel. La carte renseignée ci-dessous sera débitée à la fin de la campagne d'un montant inférieur ou égal à <%= sprintf('%.2f', @pick.price) %>€.
                   <% end %>
                 <% end %>
               </div>
