refacto campaign display

--- a/app/views/campaigns/_participation.html.erb
+++ b/app/views/campaigns/_participation.html.erb
@@ -1,4 +1,4 @@
-<% if @campaign.test_type == "Test ouvert" %>
+<% if @campaign.open_type? %>
   <div class="test-explain">
     <div class="type-and-price">
       <h3 class=test-title-box>Prix libre<i class="fas fa-question-circle"></i></h3>
